<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Register">

    <TextView
        android:id="@+id/OURCLASSROOM"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:width="30dp"
        android:paddingLeft="47dp"

        android:text="@string/our_classroom"
        android:textColor="#FFFFFF"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/create_account"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OURCLASSROOM"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/txt_fullname"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_name_and_no"
        android:drawableLeft="@drawable/ic_name_and_no"
        android:ems="10"
        android:hint="@string/full_name"

        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/txt_mobileno"

        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginBottom="312dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_contacts"
        android:drawableLeft="@drawable/ic_contacts"
        android:ems="10"
        android:hint="Mobile No."
        android:inputType="textPersonName|phone"
        android:paddingStart="15dp"

        android:paddingEnd="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fullname"
        app:layout_constraintVertical_bias="0.173" />

    <EditText
        android:id="@+id/txt_enrollmentno"
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:layout_marginBottom="92dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_enrollment"
        android:drawableLeft="@drawable/ic_enrollment"
        android:ems="10"
        android:hint="@string/enrollment_no"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enrollmentno"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/signup"
        android:layout_width="129dp"
        android:layout_height="52dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/buttonborder"
        android:text="@string/sign_up"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingTop="12dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="#ffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.18" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="109dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/OURCLASSROOM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/splash" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="489dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/txt_email"

        android:layout_width="346dp"
        android:layout_height="47dp"

        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="Enter branch(C01)"
        android:inputType="textPersonName"
        android:paddingStart="15dp"

        android:paddingEnd="15dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobileno"
        app:layout_constraintVertical_bias="0.046" />

</androidx.constraintlayout.widget.ConstraintLayout>










